--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     text-align: center;
     background: linear-gradient(#15cf78 0%, #0dd6e0 100%);
-    \
  background-repeat: no-repeat;
 }
 
@@ -107,4 +106,11 @@ section {
 }
 #BOOK {
     background-color: aqua;
+}
+#WELCOME{
+    background-color: silver;
+}
+
+#INSPIRATION{
+    background-color: gold;
 }
